--- a/r410-bookmarks/src/index.css
+++ b/r410-bookmarks/src/index.css
@@ -1,69 +1,130 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+html, body, #root {
+  display:flex;
+  height: 100%;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
+  background-color: #2f2f2c;
+  flex-direction: column;
+  margin: 0 auto;
+  width: 900px;
+  color: #ddd9ce;
+  font-size: 1.2em;
+}
+
+.App {
+  flex: 1;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+}
+.App__main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow-y: hidden;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.BookmarksList {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  padding: .5em;
+  gap: .5em;
+}
+.BookmarksList__list {
+  display: flex;
+  flex-direction: column;
+  gap: .5em;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.BookmarkItem {
+  display: flex;
+  border: 2px solid #59634c;
+  border-radius: .25em;
+  position: relative;
+  overflow: hidden;
+}
+.BookmarkItem__link {
+  flex: 1;
+  color: #ddd9ce;
+  padding: .25em;
+  background-color: #2f2f2c;
+  padding-left: 2em;
+}
+.BookmarkItem__icon {
+  position: absolute;
+  font-size: 2em;
+  transform-origin: top right;
+  left: .4em;
+  transform: rotateZ(21deg);
+}
+
+.Pagination {
+  display: flex;
+  gap: .5em;
+  font-size: 1.5em;
+  border-top: 2px solid #59634c;
+  padding-top: .25em;
+}
+.Pagination__current {
+  flex: 1;
+  text-align: center;
+}
+.Pagination__button {
+  background-color: #2f2f2c;
+  color: #e9ad5a;
+  border: 2px solid #e9ad5a;
+  border-radius: .25em;
+  padding: .25em;
   cursor: pointer;
-  transition: border-color 0.25s;
+  width: 2.5em
 }
-button:hover {
-  border-color: #646cff;
+.Pagination__button:hover {
+  color: #ddd9ce;
+  border: 2px solid #ddd9ce;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.Pagination__button:disabled {
+  color: rgba(233, 173, 90, .5);
+  border: 2px solid rgba(233, 173, 90, .5);
+  cursor: default;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.Loading {
+  margin: auto;
+  font-size: 3em;
+}
+
+.Header {
+  position: relative;
+}
+
+.UserButton {
+  position: absolute;
+  top: .5em;
+  right: 0;
+  border: 2px solid #e9ad5a;
+  border-radius: 50%;
+  overflow: hidden;
+  width: 50px;
+  height: 50px;
+  display: flex;
+}
+.UserButton__avatar {
+  margin: auto;
+}
+.UserButton__icon {
+  margin: auto;
+  font-size: 1.5em;
+  color: #ddd9ce;
+}
+
+.Footer {
+  background: transparent;
+  border: 2px solid #e9ad5a;
+  border-radius: .25em;
+  color: #e9ad5a;
+  cursor: pointer;
+  margin: .5em 0 0;
+  font-family: inherit;
+  font-size: 1em;
 }
